# orbflow

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  docker-compose.yml  justfile  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: buf-push.yml  ci-frontend.yml  ci.yml  coverage.yml  release.yml  security-audit.yml
.jules/: sentinel.md
apps/web/: CLAUDE.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/alert-manager/: alert-form.tsx  alert-manager.tsx  index.ts
apps/web/src/components/analytics/: index.ts  workflow-analytics.tsx
apps/web/src/components/budget-manager/: budget-form.tsx  budget-manager.tsx  index.ts
apps/web/src/components/collaboration/: activity-timeline.tsx  change-request-create.tsx  change-request-list.tsx  change-request-review.tsx  collaboration-page.tsx  comment-thread.tsx  diff-edge.tsx  diff-node.tsx  diff-utils.ts  index.ts  shared.tsx  workflow-diff.tsx
apps/web/src/components/credential-manager/: credential-empty-state.tsx  credential-form.tsx  credential-list.tsx  (+5 more)
apps/web/src/core/: index.ts
apps/web/src/hooks/: use-execution-polling.ts  use-focus-trap.ts  use-media-query.ts  use-node-stream.ts
apps/web/src/lib/: api.ts  clipboard.ts  cn.test.ts  cn.ts  execution.ts  output-safety.test.ts  output-safety.ts
apps/web/src/store/: alert-store.ts  budget-store.ts  canvas-store.ts  change-request-store.ts  credential-store.ts  execution-overlay-store.ts  history-store.ts  node-output-cache-store.ts  panel-store.ts  picker-store.ts  toast-store.ts  workflow-store.ts
apps/web/tests/e2e/: app-navigation.spec.ts  credential-manager.spec.ts  workflow-builder.spec.ts
configs/: orbflow.dev.yaml  orbflow.docker.yaml  orbflow.yaml
crates/orbflow-builtins/: Cargo.toml
crates/orbflow-builtins/src/: ai_chat.rs  ai_classify.rs  ai_common.rs  ai_extract.rs  ai_sentiment.rs  ai_summarize.rs  ai_translate.rs  capability_postgres.rs  delay.rs  email.rs  encode.rs  filter.rs  http.rs  lib.rs  log.rs  mcp_tool.rs  register.rs  sort.rs  ssrf.rs  template.rs  transform.rs  triggers.rs  util.rs
crates/orbflow-builtins/tests/: builtin_node_tests.rs
crates/orbflow-cel/: Cargo.toml
crates/orbflow-cel/src/: evaluator.rs  lib.rs
crates/orbflow-config/: Cargo.toml
crates/orbflow-config/src/: config.rs  lib.rs  logger.rs
crates/orbflow-core/: Cargo.toml
crates/orbflow-core/src/: alerts.rs  analytics.rs  audit.rs  compliance.rs  credential.rs  credential_proxy.rs  crypto.rs  edge.rs  error.rs  event.rs  execution.rs  lib.rs  metering.rs  metrics.rs  options.rs  otel.rs  pagination.rs  ports.rs  prediction.rs  rbac.rs  schema.rs  ssrf.rs  streaming.rs  subjects.rs  telemetry.rs  testing.rs  trigger.rs  validate.rs  versioning.rs  wire.rs  workflow.rs
crates/orbflow-core/tests/: wave2_audit_compliance.rs
crates/orbflow-engine/: Cargo.toml
crates/orbflow-engine/src/: alerts.rs  budget.rs  dag.rs  dedup.rs  engine.rs  lib.rs  resume.rs  saga.rs  sla.rs  subworkflow.rs  testnode.rs  testrunner.rs  topo.rs
crates/orbflow-engine/tests/: engine_integration.rs  saga_integration.rs  wave2_integration.rs  wave3_integration.rs
crates/orbflow-grpcapi/: Cargo.toml
crates/orbflow-grpcapi/src/: lib.rs  server.rs  types.rs
crates/orbflow-httpapi/: Cargo.toml
crates/orbflow-httpapi/src/: errors.rs  handlers.rs  lib.rs  middleware.rs  router.rs
crates/orbflow-httpapi/tests/: handler_tests.rs
crates/orbflow-mcp/: Cargo.toml
crates/orbflow-mcp/src/: client.rs  lib.rs  schema.rs  transport.rs
crates/orbflow-memstore/: Cargo.toml
crates/orbflow-memstore/src/: lib.rs  store.rs
crates/orbflow-memstore/tests/: change_request_lifecycle.rs
crates/orbflow-natsbus/: Cargo.toml
crates/orbflow-natsbus/src/: bus.rs  lib.rs
crates/orbflow-plugin/: Cargo.toml  build.rs
crates/orbflow-plugin/src/: grpc_client.rs  grpc_proto.rs  lib.rs  loader.rs  process_manager.rs  protocol.rs
crates/orbflow-plugin/tests/: grpc_compat.rs  sdk_e2e.rs  sdk_e2e_ts.rs
crates/orbflow-postgres/: Cargo.toml
crates/orbflow-postgres/src/: alerts.rs  analytics.rs  budget.rs  change_request.rs  credential.rs  event.rs  instance.rs  lib.rs  metrics.rs  migrate.rs  rbac.rs  store.rs  version.rs  workflow.rs
crates/orbflow-registry/: Cargo.toml
crates/orbflow-registry/src/: client.rs  index.rs  install.rs  lib.rs  manifest.rs  merged.rs
crates/orbflow-server/: Cargo.toml
crates/orbflow-server/src/: main.rs
crates/orbflow-test/: Cargo.toml
crates/orbflow-test/src/: assertions.rs  lib.rs  runner.rs  types.rs
crates/orbflow-testutil/: Cargo.toml
crates/orbflow-testutil/src/: lib.rs  mock_bus.rs  mock_executor.rs  mock_store.rs
crates/orbflow-trigger/: Cargo.toml
crates/orbflow-trigger/src/: cron.rs  event.rs  lib.rs  manager.rs  webhook.rs
crates/orbflow-worker/: Cargo.toml
crates/orbflow-worker-bin/: Cargo.toml
crates/orbflow-worker-bin/src/: main.rs
crates/orbflow-worker/src/: credential_proxy.rs  lib.rs  worker.rs
docker/: init-db.sh
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  getting-started.md
docs/adr/: 001-flat-packages.md  002-event-sourcing.md  003-cel-expressions.md
docs/user-guide/: README.md  access.md  activity.md  alerts.md  analytics.md  budgets.md  builder.md  credentials.md  marketplace.md  reviews.md  templates.md
proto/: plugin.proto
review-prompts-research/: fields.yaml  outline.yaml  report.md
review-prompts-research/results/: Automated_Post-Implementation_Review_Workflows.json  Claude_Code_Agent_Prompt_Best_Practices.json  Frontend_Code_Review_Prompt_Patterns.json  Generic_Implementation_Review_Template_Design.json  Prompt_Engineering_Anti-Patterns_for_Code_Review.json  Rust_Backend_Code_Review_Prompt_Patterns.json
(+112 files in other folders)
