[package]
name = "orbflow-builtins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Built-in node executors (HTTP, email, transform, filter, delay, etc.)"

[dependencies]
orbflow-core = { workspace = true }
orbflow-cel = { workspace = true }
orbflow-mcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
tera = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
url = { workspace = true }
genai = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
orbflow-test = { workspace = true }
