[package]
name = "orbflow-grpcapi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "gRPC API surface for Orbflow"

[dependencies]
orbflow-core = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
